<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
                name="mainViewModel"
                type="com.project.openweather.ui.main.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{mainViewModel.showDetailResult ? View.VISIBLE : View.GONE}"
            tools:context=".ui.main.view.DetailActivity">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_primary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@{@string/current_weather_in_somewhere(mainViewModel.selectedCityWeather.name)}"
                android:textSize="28dp"
                android:textColor="@color/text_title"
                android:textStyle="bold"
                android:maxLines="1"
                android:letterSpacing="-0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:autoSizeMaxTextSize="28dp"
                app:autoSizeMinTextSize="10dp"
                app:autoSizeTextType="uniform"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_primary_title">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    bind:bindTemperature="@{mainViewModel.selectedCityWeather.main.temp}"/>

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    bind:bindImage="@{mainViewModel.selectedCityWeather.weather[0].icon}"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    bind:bindDate="@{mainViewModel.selectedCityWeather.dt}"/>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@color/background_list_dark"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@string/wind"/>

                <TextView
                        android:id="@+id/tv_current_wind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@{@string/unit_wind(Double.toString(mainViewModel.selectedCityWeather.wind.speed))}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@string/pressure"/>

                <TextView
                        android:id="@+id/tv_current_pressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@{@string/unit_pressure(Double.toString(mainViewModel.selectedCityWeather.main.pressure))}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@color/background_list_dark"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="7dp"
                        android:layout_weight="1"
                        android:text="@string/humidity"/>

                <TextView
                        android:id="@+id/tv_current_humidity"
                        android:layout_width="0dp"
                        android:padding="7dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@{@string/unit_humidity(Long.toString(mainViewModel.selectedCityWeather.main.humidity))}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="7dp"
                        android:layout_weight="1"
                        android:text="@string/sunrise"/>

                <TextView
                        android:id="@+id/tv_current_sunrise"
                        android:layout_width="0dp"
                        android:padding="7dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        bind:bindTime="@{mainViewModel.selectedCityWeather.sys.sunrise}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@color/background_list_dark"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="7dp"
                        android:layout_weight="1"
                        android:text="@string/sunset"/>

                <TextView
                        android:id="@+id/tv_current_sunset"
                        android:layout_width="0dp"
                        android:padding="7dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        bind:bindTime="@{mainViewModel.selectedCityWeather.sys.sunset}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider" />

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="7dp"
                        android:layout_weight="1"
                        android:text="@string/geo_coords" />

                <TextView
                        android:id="@+id/tv_current_coord"
                        android:layout_width="0dp"
                        android:padding="7dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@{mainViewModel.selectedCityWeather.coord.lon + @string/symbol_comma +  mainViewModel.selectedCityWeather.coord.lat}"/>
            </LinearLayout>

            <View
                    android:layout_width="300dp"
                    android:layout_height="0.5dp"
                    android:background="@color/divider" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>